# liblc3-plugins

./: CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
debian/: changelog  control
source/devices/: CMakeLists.txt
source/instructions/: CMakeLists.txt
source/other/: CMakeLists.txt
source/traps/: CMakeLists.txt
tests/: CMakeLists.txt  lc3_plugin_test.cpp
